# ESP32-Music-Players

./: .gitignore  CMakeLists.txt  README.md  build-webflasher-firmware.sh  flash-cyd.sh  flash-s3.sh  sdkconfig  sdkconfig.cyd-ci.defaults  sdkconfig.defaults  sdkconfig.old
.github/scripts/: build-web-flasher-site.sh
.github/workflows/: deploy-web-flasher.yml  release-web-flasher.yml
CYD-BT/: CMakeLists.txt  audio_handler.c  bluetooth_handler.c  display_handler.c  idf_component.yml  main.c  main.h  touch_handler.c  ui_handler.c
S3-BT/: CMakeLists.txt  sdkconfig.old  sdkconfig.s3-ci.defaults
S3-BT/main/: CMakeLists.txt  audio_handler.c  bluetooth_ble.c  display_handler.c  esp_hid_gap.h  flac_decoder_handler.c  flac_decoder_handler.h  idf_component.yml  ma_stream_handler.c  main.c  main.h  slimproto_handler.c  touch_handler.c  ui_handler.c  wifi_handler.c
web-flasher/: README.md  app.js  index.html  manifest-cyd-image-off.json  manifest-cyd-touch-image-off.json  manifest-cyd-touch-off.json  manifest-cyd.json  manifest-s3.json  styles.css
